// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Format text and filePath 1`] = `
Object {
  "errorCount": 0,
  "filePath": "test.js",
  "messages": Array [],
  "output": "const foo = \\"bar\\"",
  "warningCount": 0,
}
`;

exports[`Format text only 1`] = `
Object {
  "errorCount": 0,
  "messages": Array [],
  "output": "const foo = \\"bar\\"",
  "warningCount": 0,
}
`;

exports[`Format with Prettier registered Text only 1`] = `
Object {
  "errorCount": 0,
  "messages": Array [],
  "output": "prettier:const foo = \\"bar\\"",
  "warningCount": 0,
}
`;

exports[`Format with Prettier registered text and filePath 1`] = `
Object {
  "errorCount": 0,
  "filePath": "test.js",
  "messages": Array [],
  "output": "prettier:const foo = \\"bar\\"",
  "warningCount": 0,
}
`;
